<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="2dp"
    android:weightSum="100">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:textSize="15sp"
            android:text="Select One:" />

        <Spinner
            android:id="@+id/act_main_test_component_sp"
            style="@android:style/Widget.Holo.Light.Spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.75" />
    </LinearLayout>

    <TextView
        android:id="@+id/policyHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/policy_heading"
        android:layout_marginTop="5dp"
        android:textAppearance="@android:style/TextAppearance.Medium"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/proxy_state"/>

        <EditText
            android:id="@+id/proxy_state"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_marginStart="5dp"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:importantForAutofill="no"
            android:inputType="none" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/proxy_type"/>

        <EditText
            android:id="@+id/proxy_type"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_marginStart="5dp"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:importantForAutofill="no"
            android:inputType="none" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/url_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:hint="@string/enter_url"
            android:inputType="textUri" />

        <Button
            android:id="@+id/act_main_start_test_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/buttons_color"
            android:text="@string/start_test"
            android:textColor="#FFFFFF"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Status:"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/text_status_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:singleLine="false"
            android:text="status"
            android:textSize="15sp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/lyt_webview_holder"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@color/backgroundWindow">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <com.example.integrationguide.TestWebView
            android:id="@+id/act_main_test_result_wv"
            android:layout_width="fill_parent"
            android:layout_height="150dp"
            android:background="@android:color/transparent"
            android:visibility="gone" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@color/backgroundWindow">

        <Button
            android:id="@+id/clear_logs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_margin="5dp"
            android:background="@drawable/buttons_color"
            android:padding="5dp"
            android:text="clear"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/clear_logs"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="5dp"
            android:text="Logs"
            android:textColor="@color/aw_blue"
            android:textSize="20sp" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/logs_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="100"
        android:background="@color/backgroundWindow">

        <TextView
            android:id="@+id/logs_text_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Default Logs"
            android:textColor="@color/textPrimary" />
    </ScrollView>

</LinearLayout>